fixed vertical spacing after Price
removed margin top from content and gave Price margin bottom instead since content may be blank and non existant on the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,11 +165,9 @@ table td {
   height: auto;
   max-height: 500px;
 }
-#item-price {
+#item-info #item-price {
   font-size: 1.8rem;
-}
-#item-info p:first-of-type {
-  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .label {
   font-weight: 600;
